@@ -12,6 +12,7 @@ Revision history for Rex
  - Clarify sudo usage for multiple commands
  - Clarify task hooks documentation
  - Clarify usage and purpose of configuration methods
+ - Clarify mkdir usage
 
  [ENHANCEMENTS]
 
